--- a/changelog.txt
+++ b/changelog.txt
@@ -1,2 +1,1 @@
-* Added "Catch Lava Critters" comparison between bug nets
-* Added polish localization, thanks Taco!
+* Added russian localization, thanks GodHybrid!
