--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
 v{ModVersion} has been published to {tMLBuildPurpose} tML v{tMLVersion}.
 
-* Added spanish localization, thanks T3sl4B0y!
+* Added italian localization, thanks Sea Noodle!
