--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
 v{ModVersion} has been published to {tMLBuildPurpose} tML v{tMLVersion}.
 
-* Added italian localization, thanks Sea Noodle!
-* Added brazilian portuguese localization, thanks GuiSaiUwU!
+* Added french localization, thanks Verveine!
