--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
 v{ModVersion} has been published to {tMLBuildPurpose} tML v{tMLVersion}.
 
-* Added Stat Comparison keybind, overriding default behavior (optional). This can be useful for players using a gamepad/controller. See more info in the mod description
+* Fixed Stat Comparison keybind not working while autopause is on
